# django-pref-manager

./: .gitignore  README.md  pyproject.toml  setup.py
django-pref-manager/: loader.py  models.py  schema.py
